Merge branch 'exp/agent-loop-rework'